@@ -1,3 +1,7 @@
+#ifndef GNUSTEP
+#include <gnsutep/base/GNUstep.h>
+#endif
+
 #import <GSWeb/GSWeb.h>
 #include "Hello.h"
 
