@@ -21,11 +21,11 @@ Installing `gsweb'
  Libraries requiered :
  ---------------------
 
-	gsantlr/	GSANTLR (Parser classes,...)
-	gsgd/		Objective-C/GD Interface
-	core/		GNUstep core
-	db/			GNUstep database
-	extensions/	Extensions
+	core/           GNUstep core
+        gdl2/           GNUstep Database Library 2
+(or     db/             alternative GNUstep Database Library)
+        gsantlr/        GSANTLR (Parser classes,...)
+        gsgd/           Objective-C/GD Interface
 
  The GNUStepWeb package:
  -----------------------
@@ -40,21 +40,20 @@ Installing `gsweb'
  ------------------
 
 1) core
- 
-2) extensions
-   It adds the Header exceptions folders (both in Foundation and extensions)
 
-3) db
-4) gsantlr
-5) the 'gd' libraries. You must have a /usr/include/gd.h file. If not take sources on http://www.boutell.com/gd
+2) gdl2
+
+3) gsantlr
+
+4) the 'gd' libraries. You must have a /usr/include/gd.h file. If not take sources on http://www.boutell.com/gd
    Extract and compile
 
-6) gsgd
+5) gsgd
 
-8) GNUstepWeb
+6) GNUstepWeb
      Go in the gsweb folder. make and make install.
 
-9) Apaches modules for GNUstepWeb
+7) Apaches modules for GNUstepWeb
     Still in the gsweb folder there is a GSWAdaptors/Apache folder, go in and make. There no make install. Instead you must copy the mod_gsweb.so module in you Apache libexec directory (something like /usr/apache/libexec).
 
 At this point everything is done, still remains the Apache configuration:
@@ -68,70 +67,73 @@ in config.mak
 Configurating Apache:
 =====================
 
-	In Apache httpd.conf file, add thoses lines:
+In Apache httpd.conf file, add thoses lines:
 
-	LoadModule GSWeb_Module  libexec/mod_gsweb.so
-	AddModule mod_gsweb.c
+   LoadModule GSWeb_Module  libexec/mod_gsweb.so
+   AddModule mod_gsweb.c
 
-	And this one to specify the configuration file (for exemple /etc/httpd/conf/gsweb.conf)
+And this one to specify the configuration file (for exemple /etc/httpd/conf/gsweb.conf)
 
-	GSWeb_ConfigFilePath /etc/httpd/conf/gsweb.conf
+   GSWeb_ConfigFilePath /etc/httpd/conf/gsweb.conf
 
 
- If you use virtual hosts (Apache in localhost does not requiered them), add the following lines:
+If you use virtual hosts (Apache in localhost does not requiered them), add the following lines:
 
 	<Location /GSWeb*>
 		SetHandler GSWeb
 	</Location>
 
- Then, create the file configuration file (for exemple /etc/httpd/conf/gsweb.conf) which contains parameters for GNUstepWeb Applications: 
+Then, create the file configuration file (for exemple /etc/httpd/conf/gsweb.conf) which contains parameters for GNUstepWeb Applications: 
 
- The format is(there is an example for values below):
+The format is(there is an example for values below):
 
 {
-	canDumpStatus=YES;	//YES if server can display status (URL: /GSWeb/status)
-	GSWExtensionsFrameworkWebServerResources="/GSW/GSWExtensions/WebServerResources";	//URL of GSWExtensions Framework WebServerResources directory
+  canDumpStatus = YES;
+  //YES if server can display status (URL: /GSWeb/status)
 
-	applications=    {
-				ApplicationName =  {
-		                    //URL of GSWExtensions Framework WebServerResources directory. It overides Global parameter
-		                    GSWExtensionsFrameworkWebServerResources="/GSW/GSWExtensions/WebServerResources";
+  GSWExtensionsFrameworkWebServerResources =
+    "/GSW/GSWExtensions/WebServerResources";
+    //URL of GSWExtensions Framework WebServerResources directory
 
-							//YES to say that this application can be listed when the adaptor don't find an application
-							canDump = YES;
+  applications = {
+    ApplicationName = {
+      //URL of GSWExtensions Framework WebServerResources directory.
+      //It overides Global parameter
+      GSWExtensionsFrameworkWebServerResources =
+        "/GSW/GSWExtensions/WebServerResources";
 
-							instances =	{
- 											InstanceNumber =	{
-													host= IPAdressOfTheComputerOnWhichRunTheApplication;
-													port= ThePortListenByTheApplication;
-													parameters=      {
-																		transport= socket;
-																		};
-												 }
-								       		};
-									};
-						};
+      //YES to say that this application can be listed when the
+      //adaptor don't find an application
+      canDump = YES;
+
+      instances = {
+        InstanceNumber = {
+          host = IPAdressOfTheComputerOnWhichRunTheApplication;
+          port = ThePortListenByTheApplication;
+          parameters = { transport= socket; };
+        }
+      };
+    };
+  };
 }
 
-
-exemple values for a localhost use: 
+Example values for a localhost use: 
 {
-	canDumpStatus=YES;
-	GSWExtensionsFrameworkWebServerResources="/GSW/GSWExtensions/WebServerResources";
-	applications=    {
-				MyApp =  {
-						canDump = YES;
-						instances =      {
-											1 = {
-													host= 127.0.0.1;
-													port= 9001;
-													parameters=      {
-																		transport= socket;
-																	};
-												}
-								      };
-						};
-					};
+  canDumpStatus = YES;
+  GSWExtensionsFrameworkWebServerResources =
+    "/GSW/GSWExtensions/WebServerResources";
+  applications = {
+    MyApp =  {
+      canDump = YES;
+      instances = {
+        1 = {
+          host = 127.0.0.1;
+          port = 9001;
+          parameters = { transport= socket; };
+        };
+      };
+    };
+  };
 }
 
 
